# Ejercicios_STL

./: CMakeLists.txt  README.md  main.cpp  resultados.txt
ejercicio1/: Ejercicio1.cpp  Ejercicio1.h
ejercicio2/: Circulo.cpp  Circulo.h  Triangulo.cpp  Triangulo.h
ejercicio3/: Ejercicio3.cpp  Ejercicio3.h
ejercicio4/: Ejercicio4.cpp  Ejercicio4.h
ejercicio5/: Ejercicio5.cpp  Ejercicio5.h
