cmake_minimum_required(VERSION 3.29)
project(Ejercicios_STL)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicios_STL
    main.cpp
    ejercicio1/Ejercicio1.cpp
    ejercicio1/Ejercicio1.h
        ejercicio2/Circulo.h
        ejercicio2/Circulo.cpp
        ejercicio2/Triangulo.cpp
        ejercicio3/Ejercicio3.h
        ejercicio3/Ejercicio3.cpp
        ejercicio4/Ejercicio4.h
        ejercicio4/Ejercicio4.cpp
)
